# mlir-test

./: CMakeLists.txt
mytest/: CMakeLists.txt  test.toy
mytest/.antlr/: ToyBaseListener.java  ToyLexer.interp  ToyLexer.java  ToyLexer.tokens  ToyListener.java  ToyParser.java
mytest/include/toy/: CMakeLists.txt
